--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "description": "",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.13.3",
+    "@parcel/transformer-sass": "^2.15.2",
     "jsdoc": "^4.0.4",
-    "parcel": "^2.13.3"
+    "parcel": "^2.15.2",
+    "sass": "^1.89.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "engines": {
