Uppdatera package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "description": "",
   "devDependencies": {
